--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="hello">
                     <div class="blog">
-                <img src="picture/image.png" alt="">
+                <img src="/picture/creative-headline-APNnyM36puU-unsplash (1).jpg" alt="">
                     </div>
 
                 <div class="child">
